--- a/main.css
+++ b/main.css
@@ -1,3 +1,67 @@
-body {
-    
+#left {
+    float: left;
+    border-right: 1px solid #f00;
+    padding: 20px;
+    width: calc(50vw - 41px);
+    height: calc(100vh - 40px);
+    overflow: scroll;
 }
+#right {
+    float: left;
+    padding: 20px;
+    width: calc(50vw - 40px);
+    height: calc(100vh - 40px);
+    overflow: scroll;
+}
+
+position: relative;
+width: 1440px;
+height: 1024px;
+
+background: #FFFFFF;
+border: 1px solid #000000;
+box-sizing: border-box;
+
+
+/* 00:00 */
+
+position: absolute;
+width: 1724px;
+height: 55px;
+
+font-family: Times New Roman;
+font-style: normal;
+font-weight: normal;
+font-size: 36px;
+line-height: 41px;
+
+color: #000AFF;
+
+
+
+/* Line 4 */
+
+position: absolute;
+width: 328px;
+height: 0px;
+
+border: 1px solid #000AFF;
+
+
+/* Line 5 */
+
+position: absolute;
+width: 720px;
+height: 0px;
+
+border: 1px solid #000AFF;
+transform: rotate(0.08deg);
+
+
+/* Ellipse 39 */
+
+position: absolute;
+width: 20px;
+height: 20px;
+
+background: #000AFF;
