--- a/main.css
+++ b/main.css
@@ -1,3 +1,19 @@
+#content, html, body {
+    height: 100%;
+    margin: 0px;
+    font-family: 'Times New Roman', serif;
+    font-weight: normal;
+    font-size: 20px;
+    color: #f00;
+    background-color: #fff;
+}
+
+a {
+  color: #f00;
+  text-decoration: none;
+  border-bottom: 1px solid #f00;
+}
+
 #left {
     float: left;
     border-right: 1px solid #f00;
@@ -14,54 +30,29 @@
     overflow: scroll;
 }
 
-position: relative;
-width: 1440px;
-height: 1024px;
+.button {
+  border: 1px solid #f00;
+  border-radius: 40px;
+  padding: 5px;
+  padding-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #f00;
+  color: #fff;
+}
+.students {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
+.planning {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
 
-
-/* 00:00 */
-
-position: absolute;
-width: 1724px;
-height: 55px;
-
-font-family: Times New Roman;
-font-style: normal;
-font-weight: normal;
-font-size: 36px;
-line-height: 41px;
-
-color: #000AFF;
-
-
-
-/* Line 4 */
-
-position: absolute;
-width: 328px;
-height: 0px;
-
-border: 1px solid #000AFF;
-
-
-/* Line 5 */
-
-position: absolute;
-width: 720px;
-height: 0px;
-
-border: 1px solid #000AFF;
-transform: rotate(0.08deg);
-
-
-/* Ellipse 39 */
-
-position: absolute;
-width: 20px;
-height: 20px;
-
-background: #000AFF;
+figure {
+    margin: 0;
+}
