--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ a {
   margin-left: 40px;
 }
 
+
 #left {
     float: left;
     border-right: 1px solid #000AFF;
@@ -77,31 +78,26 @@ a {
 }
 
 .show{
-  display: grid;
+  display: flex;
+  flex-direction: row;
   border: 1px solid #fff;
   border-right-style: none;
   border-left-style: none;
   width: 45vw;
   margin-left: auto;
   margin-right: auto;
-  grid-template-columns: repeat(5,1fr);
   padding: 20px;
   padding-left: 30px;
 }
 
-.show_logo{
-  grid-column-start: 1;
-  grid-column-end: 2;
+.show_logo{  
   height: 100%;
 }
 
 .time {
-grid-column-start: 2;
-grid-column-end: 3;
-margin-top: 30px;
+  margin-left: 30px;
 }
 
 .description {
-  grid-column-start: 3;
-  grid-column-end: 6;
+  margin-left: 30px;
 }
