--- a/main.css
+++ b/main.css
@@ -45,11 +45,19 @@ h1 {
   font-style: normal;
 }
 
+a {
+  color: white;
+}
+
+a:visited {
+  color: white;
+}
 
 p {
   font-family: alga, serif;
   font-weight: 300;
   font-style: normal;
+  font-size: 14pt; 
 }
 
 #header {
@@ -154,6 +162,14 @@ p {
   100% { transform: translateX(90%); }
 }
 
+#shoutout {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  width: 95%;
+  font-size: 12pt;
+}
+
 
 
 
@@ -187,11 +203,9 @@ p {
 }
 
 @media screen and (max-width: 1150px) {
-  
   body {
-    font-size: 16px;
+    font-size: 12pt;
   }
-
 }
 
 @media screen and (max-width: 940px) {
@@ -250,7 +264,7 @@ p {
   font-family: alga, serif;
   font-weight: 300;
   font-style: normal;
-  font-size: 10pt; 
+  font-size: 14pt; 
 }
 
 #header {
