--- a/main.css
+++ b/main.css
@@ -28,9 +28,8 @@
   display: flex;
   flex-direction: column;
   float: left;
-  border-right: 1px solid #000AFF;
-  width: 50%;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #000AFF;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -49,22 +48,6 @@
   text-align: justify;
 }
 
-#right {
-  position: absolute;
-  left: 50%;
-  width: 50vw;
-  height: 100vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  background-color:;
-}
-
-#twitch-embed {
-  height: 50vh;
-  margin-right: 20px;
-  margin-top:20px;
-}
-
 h1 {
   font-family: alga, serif;
   font-weight: 300;
@@ -75,15 +58,9 @@ a {
   color: white;
 }
 
-#logo_poster_container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-
 .logo-container {
-  width: 25%;
-  height: 20%;
+  width: 15%;
+  height: 40%;
 }
 
 a:visited {
@@ -137,10 +114,6 @@ p {
 .show{
   display: flex;
   flex-direction: column;
-  border: 1px solid #fff;
-  border-right-style: none;
-  border-left-style: none;
-  border-top-style: none;
   width: calc(100% - 40px);
   height: auto;
   margin-left: 20px;
@@ -212,9 +185,8 @@ p {
 }
 
 #shoutout {
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 30px;
+  margin-left: 20px;
   width: 95%;
   font-size: 12pt;
 }
@@ -309,79 +281,7 @@ p {
   display: none;
 }
 
-#left {
-  display: flex;
-  position: relative;
-  border: none;
-  width: 100%;
-  height: auto;
-  background-color: #000AFF;
-  overflow-y: visible;
-  overflow-x: visible;
-}
 
-#right {
-  left:0%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 20%;
-  margin-left: auto;
-  margin-right: auto;
-  overflow-y: visible;
-  overflow-x: visible;
-  background-color: #000AFF;
-}
-
-#twitch-embed {
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
-}
-
-h1 {
-  font-family: alga, serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 14pt;
-}
-
-
-p {
-  font-family: alga, serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 14pt; 
-}
-
-
-.header_title {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  margin-top: 10px;
-  margin-left: 40px;
-  width: 60%;
-}
-
-.interlude {
-  font-size: 14pt;
-  display: flex;
-  text-align: center;
-  width: 80%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#show {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.show_logo {
-  margin-right: 5px;
-}
-
+.logo-container {
+  width: 50%;
 }
